     CHANGES in PHANGORN VERSION 1.99-8 

NEW FEATURES

    o pmlPart got an argument rooted to handle rooted trees 

    o simSeq is now a generic function. This simplifies the  

      construcion of parametric bootstrap test
 
    o SOWH.test (very experimental)

    o plot.networx improved considerably and plots now planar graphs nicely

BUG FIXES

    o fixed some bugs in ancestral.pars 

    o amino acid model "Blosum62" was not working

OTHER CHANGES

    o improvements to read.nexus.splits, write.nexus.splits to 

      be more consistant with splitstree

    o splitsNetwork got an additional argument splits

    o help for consensusNet, as.splits, as.networx have been reorganised

      and improved

    o treedist is much faster for larger trees 

    o several changes to keep R CMD check happy 

    o a development version phangorn is now available on github

      https://github.com/KlausVigo/phangorn.git 

 

     CHANGES in PHANGORN VERSION 1.99-6 

NEW FEATURES

    o cladePar helps coloring trees 

    o treedist is faster for larger trees, better documentation and examples 

BUG FIXES

    o the plot of consensusNet shows now the proper bootstrap values 

OTHER CHANGES

    o phangorn does not depend only suggest rgl

      (should build on OS X now)

    o default rearrangement for parsimony is now "SPR"



      CHANGES in PHANGORN VERSION 1.99-5 

NEW FEATURES

    o RF.dist works also on "multiPhylo" objects and is quite fast

    o optim.pml can now handle NNI tree arrangements for rooted trees,

      still experimental but useful for dating etc.

BUG FIXES

    o rNNI did return sometimes trees without tip labels 

    o SH.test did not work for pmlCluster objects

    o df for rooted rooted/ultrametric trees are correctly computed

OTHER CHANGES

    o lots of internal code C-code changed 

    o exports of some of the internal ML function, this should speed up in

      future other packages e.g. the colescentMCMC package, which use them
