@@ -1,7 +1,7 @@
 Package: phangorn
 Title: Phylogenetic analysis in R
 Version: 1.99-8
-Date: 2014-09-24
+Date: 2014-09-30
 Author: Klaus Schliep, Emmanuel Paradis
 Maintainer: Klaus Schliep <klaus.schliep@gmail.com>
 Description: Phylogenetic analysis in R (Estimation of phylogenetic
